--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,20 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.0.3"
+    },
+    "devDependencies": {
+        "c8": "^8.0.1",
+        "chai": "^4.3.10",
+        "chai-as-promised": "^7.1.1",
+        "chai-http": "^4.4.0",
+        "mocha": "^10.2.0",
+        "sinon": "^17.0.1",
+        "sinon-chai": "^3.7.0"
     }
 }
